# DontEatCancer

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_evidence_detail_fields.py
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  evidence.py  ingredient.py
backend/app/routers/: __init__.py  evidence.py  ingredients.py  processing.py  search.py  upload.py
backend/app/schemas/: __init__.py  evidence.py  ingredient.py
backend/app/services/: evidence_service.py  ingredient_service.py
backend/pipeline/: ai_processor.py  cli.py  fulltext_fetcher.py  openalex_fetcher.py  pubmed_fetcher.py  query_generator.py  ris_parser.py  scopus_fetcher.py
backend/scripts/: seed_ingredients.py
frontend/: .env.development  .gitignore  package-lock.json  package.json
frontend/prisma/: schema.prisma  seed.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/v1/evidence/: route.ts
frontend/src/app/api/v1/ingredients/: route.ts
frontend/src/app/evidence/[id]/: page.tsx
frontend/src/app/ingredients/: page.tsx
frontend/src/app/ingredients/[slug]/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/app/tools/query-generator/: page.tsx
frontend/src/app/tools/upload/: page.tsx
frontend/src/components/: AlphabetNav.tsx  EvidenceCard.tsx  IngredientCard.tsx  IngredientOverview.tsx  NavBar.tsx  RiskBadge.tsx  SearchBar.tsx
frontend/src/lib/: api-helpers.ts  api.ts  prisma.ts  types.ts
(+15 files in other folders)
