[project]
name = "donteatcancer"
version = "0.1.0"
description = "Research repository for food chemical safety evidence"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "openai>=1.0",
    "rispy>=0.9",
    "python-multipart>=0.0.18",
    "typer>=0.15",
    "langdetect>=1.0",
]

[project.optional-dependencies]
postgres = [
    "psycopg2-binary>=2.9",
    "alembic>=1.14",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.28",
]

[tool.setuptools.packages.find]
include = ["app*", "pipeline*"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
